# create-introspect-mcp

./: .gitignore  CLAUDE.md  README.md  SKILL.md  STATUS.md  dev_requirements.txt  main.py  publish.py  pyproject.toml
ai_docs/: CLAUDE_SKILLS.md
scripts/: __init__.py  create_database.py  create_full_mcp_server.py  divide_entities.py  introspect.py  publish.py  run_with_env.py  validate_server.py  verify_coverage.py
src/: SKILL.md
src/scripts/: create_database.py  create_full_mcp_server.py  create_mcp_server.py  divide_entities.py  publish.py  requirements.txt  run_with_env.py  verify_coverage.py
tests/: __init__.py  conftest.py  test_create_database.py  test_create_full_mcp_server.py  test_create_mcp_server.py  test_divide_entities.py  test_introspect.py  test_run_with_env.py  test_validate_server.py  test_verify_coverage.py
